--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,29 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 5%;
+}
+
+.description{
+   margin: 0 auto;
+}
+
+.description h1{
+    text-align: center;
+    font-size: 300%;
+    margin-top: 1.5rem;
+    font-weight: 800;
+    fill: none;
+    font-family: "Nike Futura ND" "Helvetica Now Text Medium",
+        Helvetica,
+        Arial,
+        sans-serif;;
+}
+
+.description h3{
+    max-width: 60%;
+    margin: 0 auto;
+    margin-top: 10px;
+    font-weight: 300;
 }
 
 .container {
@@ -88,3 +110,224 @@ body {
     transform-style: preserve-3d;
 }
 
+.container #box1::before {
+    content: "CHROME";
+    position: absolute;
+    top: 30px;
+    left: 20px;
+    font-size: 3.8em;
+    font-weight: 900;
+    color: var(--card-bg-text);
+    font-style: italic;
+    opacity: 0;
+    transition: 0.5s;
+}
+
+.container #box1::after {
+    content: "YELLOW";
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    font-size: 3.8em;
+    font-weight: 900;
+    color: var(--card-bg-text);
+    font-style: italic;
+    opacity: 0;
+    transition: 0.5s;
+}
+
+.container #box1:hover::after,
+.container #box1:hover::before {
+    opacity: 0.04;
+}
+
+.container #box2::before {
+    content: "NEON";
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    font-size: 5.5em;
+    font-weight: 900;
+    color: var(--card-bg-text);
+    font-style: italic;
+    opacity: 0;
+    transition: 0.5s;
+}
+
+.container #box2::after {
+    content: "WHITE";
+    position: absolute;
+    bottom: 20px;
+    right: 30px;
+    font-size: 4.5em;
+    font-weight: 900;
+    color: var(--card-bg-text);
+    font-style: italic;
+    opacity: 0;
+    transition: 0.5s;
+}
+
+.container #box2:hover::after,
+.container #box2:hover::before {
+    opacity: 0.04;
+}
+
+.container #box3::before {
+    content: "PLUM";
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    font-size: 5.5em;
+    font-weight: 900;
+    color: var(--card-bg-text);
+    font-style: italic;
+    opacity: 0;
+    transition: 0.5s;
+}
+
+.container #box3::after {
+    content: "CHALK";
+    position: absolute;
+    bottom: 20px;
+    right: 30px;
+    font-size: 4.5em;
+    font-weight: 900;
+    color: var(--card-bg-text);
+    font-style: italic;
+    opacity: 0;
+    transition: 0.5s;
+}
+
+.container #box3:hover::after,
+.container #box3:hover::before {
+    opacity: 0.04;
+}
+
+.container .box .name {
+    position: absolute;
+    bottom: -5px;
+    left: -60px;
+    text-align: center;
+    color: var(--name-color);
+    width: 100%;
+    transform-style: preserve-3d;
+    transform: translate3d(0, 0, 75px);
+    transition: 0.5s;
+    opacity: 0;
+    z-index: 10;
+    font-weight: 400;
+    font-size: 1.0rem;
+}
+
+.container .box:hover .name {
+    bottom: 20px;
+    opacity: 1;
+}
+
+.container .box .buy {
+    position: absolute;
+    bottom: 0;
+    left: 60%;
+    transform-style: preserve-3d;
+    transform: translate3d(0, 0, 75px);
+    color: #ffffff;
+    background: #333;
+    padding: 10px 25px;
+    border-radius: 30px;
+    text-decoration: none;
+    transition: 0.5s;
+    opacity: 0;
+    z-index: 10;
+    font-weight: 300;
+    font-size: .9rem;
+}
+
+.container .box:hover .buy {
+    bottom: 10px;
+    opacity: 1;
+}
+
+.container .box .buy:hover{
+    box-shadow: 5px 5px 20px grey;
+}
+
+.container .box .circle {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    transition: 0.5s;
+    background: #ffffff;
+    transform-style: preserve-3d;
+    z-index: 10;
+    opacity: 1;
+    transform: translate3d(-50%, -50%, 0px);
+}
+
+.container .box:hover .circle {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    transition: 0.5s;
+    background: #ffffff;
+    transform-style: preserve-3d;
+    z-index: 10;
+    opacity: 1;
+    transform: translate3d(-50%, -50%, 35px);
+}
+
+.container .box .product {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    max-width: 300px;
+    transition: 0.5s;
+    z-index: 11;
+    transition: 0.5s;
+    transform-style: preserve-3d;
+    transform: translate3d(-50%, -50%, 0px) rotate(-15deg);
+}
+
+#product3{
+    max-width:325px;
+}
+
+.container .box:hover .product {
+    transform: translate3d(-50%, -50%, 100px) rotate(-15deg);
+}
+
+.container .box:nth-child(1) .circle,
+.container .box:nth-child(1) .buy {
+    background: #f1d46c;
+}
+
+.container .box:nth-child(2) .circle,
+.container .box:nth-child(2) .buy {
+    background: #daed4f;
+}
+
+.container .box:nth-child(3) .circle,
+.container .box:nth-child(3) .buy {
+    background: #bfcdff;
+}
+
+.mode-switch {
+    cursor: pointer;
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    width: 30px;
+    color: var(--name-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.mode-switch.active .moon {
+    fill: var(--name-color);
+}
