--- a/styles.css
+++ b/styles.css
@@ -81,6 +81,7 @@ body {
         Helvetica,
         Arial,
         sans-serif;;
+    color: var(--name-color);
 }
 
 .description h3{
@@ -88,6 +89,7 @@ body {
     margin: 0 auto;
     margin-top: 10px;
     font-weight: 300;
+    color: var(--name-color);
 }
 
 .container {
