Media Query added

--- a/styles.css
+++ b/styles.css
@@ -345,3 +345,13 @@ body {
             max-width: 80%;
         }
 }
+
+@media only screen and (max-width: 770px) {
+   .description h1{
+    font-size: 1.8rem;
+   }
+   .description h3 {
+       font-size: 1.0rem;
+       max-width: 65%;
+   }
+}
